--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -19,11 +19,17 @@ h2 {
 
 div#zentai {
 	display: grid;
-	grid-template-columns: 2fr 2fr;
+	grid-template-columns: 1fr 1fr;
+	grid-auto-rows: 200px;
+	grid-gap: 10px;
 	width: 1024px;
 }
 
 div#zentai > div {
-	margin-left: 5px;
+	padding-left: 5px;
 	background-color: #ffefaf;
+}
+
+img.sign {
+	float: right;
 }
