--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -9,7 +9,8 @@ p.info {
 }
 
 h1 {
-	background-color: #7f7fcf;
+	color: white;
+	text-shadow: 1px 0 10px navy;
 }
 
 h2 {
@@ -23,11 +24,12 @@ div#zentai {
 	grid-auto-rows: 200px;
 	grid-gap: 10px;
 	width: 1024px;
+	color: #3f3faf;
+	background: linear-gradient(#ffefaf);
 }
 
 div#zentai > div {
 	padding-left: 5px;
-	background-color: #ffefaf;
 }
 
 img.sign {
