--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-	border: solid 1px black;
+	background: linear-gradient(.25turn, #ffffff, 60%, #ffefaf);
 	margin: 5px;
 }
 
@@ -25,7 +25,7 @@ div#zentai {
 	grid-gap: 10px;
 	width: 1024px;
 	color: #3f3faf;
-	background: linear-gradient(#ffefaf);
+	background: linear-gradient(#ffefaf, #ffefaf);
 }
 
 div#zentai > div {
