--- a/project.css
+++ b/project.css
@@ -1,5 +1,3 @@
-h1 {
-    color: #6594e0;/*文字色*/
-    /*線の種類（点線）2px 線色*/
-    border-bottom: dashed 2px #6594e0;
+body {
+    background-color: blue;
   }
